# rig-architect

./: .gitignore  .pre-commit-config.yaml  CONTEXT_CACHING.md  Cargo.toml  DEEPSEEK_TYPES.md  INSTRUCTIONS.md  README.md  deploy.sh  run.sh
.rig_cache/: false_positive_cache.json
_architect_ai/: .gitkeep  patch.diff  profile.json
architecture_in/: spec.md
scripts/: generate_types.rs
src/: config.rs  deepseek.rs  false_positive_filter.rs  lib.rs  main.rs  mcp.rs  patterns.rs  vector_store.rs
src/deepseek/: client.rs  mod.rs  types.rs
templates/: api_types_template.txt  types_template.rs
