[package]
name = "ai_architect"
version = "0.1.0"
edition = "2021"
description = "AI-powered architecture analysis and generation tool"
authors = ["Vadim Nicolai <nicolai.vadim@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicolad/rig-architect"

[dependencies]
# Core async runtime and utilities
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web service dependencies
shuttle-runtime = "0.54.0"
shuttle-axum = "0.54.0"
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Cron job dependencies
apalis = { version = "0.6", features = ["retry"] }
apalis-cron = "0.6"

# AI and language model integration
rig = { package = "rig-core", version = "0.18.2", features = ["rmcp"] }
rig-derive = "0.1.5"

# MCP integration (official Rust SDK)
rmcp = { version = "0.6", features = ["transport-child-process", "client"] }
schemars = "0.8"

# CLI and file system utilities for architect improver
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
percent-encoding = "2"

# GitHub integration
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Configuration and environment
dotenvy = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.21"

[profile.release]
codegen-units = 1
